Done with Initial Version
Finished Bugs, BackEnd complete!

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="title_activity_new_activity_detail">New Activity Detail</string>
     <string name="title_activity_reports_list">Reports</string>
     
+    <!-- activity field related -->
+    <string name="activity_field_date">Date</string>
+    <string name="activity_field_time">Time</string>
+    <string name="activity_field_duration">Duration</string>
+    
     <!-- String values for reports activity -->
     <string name="reports_daily">Daily</string>
    	<string name="reports_weekly">Weekly</string>
